<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context=".HomeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".HomeActivity">

            <TextView
                android:id="@+id/appTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="@dimen/appTitleTextSize"
                android:textColor="@color/appTitleColor"
                android:textStyle="italic"
                android:typeface="monospace"
                android:layout_marginTop="@dimen/appTitleMarginTop"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/bookings"
                android:layout_width="0dp"
                android:layout_height="60dp"
                style="@style/defaultButton"
                android:text="Mes réservations"
                android:onClick="goToBookings"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/appTitle"
                />

            <Button
                android:id="@+id/profile"
                android:layout_width="0dp"
                android:layout_height="60dp"
                style="@style/defaultButton"
                android:text="Mon profil"
                android:onClick="goToProfile"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/bookings"
                />

            <TextView
                android:id="@+id/launchResearchTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/launchResearch"
                android:textSize="@dimen/textViewTextSize"
                android:layout_marginTop="@dimen/textViewResearchMarginTop"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profile"
                />

            <EditText
                android:id="@+id/editTextStartReservation"
                android:layout_width="0dp"
                android:layout_height="50dp"
                style="@style/defaultEditText"
                android:hint="@string/startReservationText"
                android:inputType="date"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/launchResearchTextView"
                />

            <EditText
                android:id="@+id/editTextEndReservation"
                android:layout_width="0dp"
                android:layout_height="50dp"
                style="@style/defaultEditText"
                android:hint="@string/endReservationText"
                android:inputType="date"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextStartReservation"
                />

            <Button
                android:id="@+id/launchResearch"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginTop="@dimen/buttonMarginY"
                style="@style/defaultButton"
                android:text="Rechercher"
                android:onClick="goToSearch"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editTextEndReservation"
                />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>





</android.support.constraint.ConstraintLayout>